src/components/about/about.less
.about {
  font-family: 'GlacialIndifference';

  .description {
    margin-bottom: 1em;
  }

  a.blog-link {
    margin-top: 0.25em;
    display: block;
    font-family: 'Allura';
    font-size: 2em;
    color: @color-primary;
  }

  max-width: 50em;
  margin: 0 auto;

  .split {
    margin-top: 3em;

    .left, .right {
       width: 47%;
       display:inline-block;
       height: 33em;
       vertical-align: top;
       &:first-child {
          margin-right: 6%;
       }
    }
    .left {
      font-size: 1.15em;
      p {
        margin:0;
      }
      .email, .profile-pic {
        display:none;
      }
    }
  }

  .profile-pic {
    width: 100%;
  }

  h1 {
    display: inline-block;
    margin: 0 0 0 0.5em;
    font-family: Allura;
    font-weight: 100;
  }

  input, textarea, button {
    width: 100%;
    display: block;
    padding: 0.25em;
    font-size: 1.25em;
    margin-bottom: 0.5em;
    border: 1px solid #aaa;
    box-sizing: border-box;
  }

  button {
    background: #ddd;
  }

  textarea {
    resize: none;
  }

  label.error {
    + input, + textarea {
      border-color: #d46464;
    }
  }
  span.error {
    margin-left: 0.5em;
    color: #d46464;
  }
  .email {
    margin: 1em 0;
    .prompt {
      margin-bottom: 0.5em;
    }
  }

  @media @screen-sm {
    width:90%;
    .split {
      .right {
        display:none;
      }
      .left {
        width: 100%;
        margin: 0;
        .email {
          display: block;
        }
        .profile-pic {
          display: block;
          float:right;
          width: 50%;
        }
      }
    }
  }
}

